# django_line_pay

./: .env.example  README.md  pyproject.toml
core/: settings.py  urls.py
page/: urls.py  views.py
payment/: urls.py  views.py
templates/page/: home.html
templates/payment/: checkout.html  fail.html  success.html
